# logicx

./: .gitignore  Cargo.toml  build.js  package.json  tsconfig.json
app/: main.ts  view.ts  wasm.ts
css/: main.css
signal/: Cargo.toml
signal/src/: lib.rs
src/: component.rs  lib.rs  project.rs  wire.rs
src/components/: component.rs  edit.rs  mod.rs  play.rs  surface.rs  wire.rs
