[package]
name = "logicx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["nightly", "csr"] }
leptos-use = "0.13.6"
leptos_router = { version = "0.6.15", features = ["nightly", "csr"] }
backtrace = "0.3.74"